--- a/fonecmid-diplom/src/Documents/ВКМ_ГрафикОтпусков/Forms/ФормаДокумента/Form.form
+++ b/fonecmid-diplom/src/Documents/ВКМ_ГрафикОтпусков/Forms/ФормаДокумента/Form.form
@@ -663,8 +663,8 @@
     <headerHorizontalAlign>Left</headerHorizontalAlign>
     <showInFooter>true</showInFooter>
     <extInfo xsi:type="form:InputFieldExtInfo">
-      <autoMaxWidth>true</autoMaxWidth>
-      <autoMaxHeight>true</autoMaxHeight>
+      <horizontalStretch>true</horizontalStretch>
+      <verticalStretch>false</verticalStretch>
       <wrap>true</wrap>
       <chooseType>true</chooseType>
       <typeDomainEnabled>true</typeDomainEnabled>
